# Nexus-HEMS-Dash

./: .codecov.yml  .coderabbit.yaml  .deepsource.toml  .dockerignore  .editorconfig  .env.example  .gitguardian.yaml  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmessage  .graphifyignore  .grype.yaml  .lintstagedrc.json  .log4brains.yml  .mcp.json  .nojekyll  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .releaserc.json  .renovaterc.json  .semgrepignore  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN-SYSTEM.md  DEVOPS.md  Dockerfile  Dockerfile.server  FEATURE_STATUS.md  PRD.md  README.md  SECURITY.md  biome.json  commitlint.config.js  (+27 more)
.claude/: settings.json
.codeant/: configuration.json  instructions.json
.cursor/: index.mdc
.devcontainer/: devcontainer.json
.github/: CI-AUDIT.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
.husky/: pre-commit  pre-push
.notes/: meeting_notes.md
.perf/: .gitkeep
.secrets/: README.md
.storybook/: main.ts
docs/: AFIR-Compliance-Checklist.md  AI-Providers-Setup.md  API-Reference.md  Accessibility-Testing-Guide.md  Adapter-Dev-Guide.md  Adapter-Safety-Matrix.md  Architecture-Roadmap.md  Audit-Report-2026-06-29.md  Audit-Report-2026-07-02-Full-Scale.md  Audit-Report-2026-07-02.md  Audit-Report-2026-07-03.md  Audit-Report-2026-07-04-CloudAgent-Verification.md  Backend-Implementation-Roadmap.md  Biome-Migration-Roadmap.md  Campaign-Handoff-2026-07.md  Claude-Code-Master-Prompt-v2-Nexus-HEMS-Dash.md  Command-Palette-Dev-Guide.md  Deployment-Checklist.md  Deployment-Guide.md  Developer-Scripts-Reference.md  EEBUS-Certificate-Setup.md  EEBUS-Integration-Guide.md  EEBUS-SHIP-Handshake-Implementation.md  Ecosystem-Expansion-Roadmap-v5.md  Energy-Router-Design.md  Environment-Variables.md  Grafana-Dashboards-Custom.md  Graphify-Integration-Guide.md  HA-Custom-Cards-Sankey.md  HA-Migration-Hybrid-Plan.md  HEMS-Protocol-Comparison.md  Hardware-Compatibility-Matrix.md  Heat-Pump-Integration-Guide.md  Home-Assistant-Integration-Guide.md  (+43 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+1235 files in other folders)
