[package]
name = "nexus-hems-dash"
version = "4.2.0"
description = "Nexus HEMS Dashboard – Desktop App"
authors = ["Nexus HEMS Team"]
edition = "2021"

[lib]
name = "nexus_hems_dash_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
