[package]
name = "nexus-hems-dash"
version = "4.4.0"
description = "Nexus HEMS Dashboard – Desktop App"
authors = ["Nexus HEMS Team"]
edition = "2021"

[lib]
name = "nexus_hems_dash_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-haptics = "2"
tauri-plugin-barcode-scanner = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "android")'.dependencies]
tauri = { version = "2", features = ["wry"] }

[target.'cfg(target_os = "ios")'.dependencies]
tauri = { version = "2", features = ["wry"] }
